--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/reza.png" alt="reza pic"></td>
+      <td><img src="Images/reza.png" alt="reza pic"></td>
       <td>
         <h1>Reza Pahlawi</h1>
         <p><em>Just Someone who <strong>want to learn</strong></em></p>
